# nub

./: .gitignore  .worktreeinclude  AGENTS.md  Cargo.toml  README.md  install.ps1
.claude/skills/dev-loop/: SKILL.md
.claude/skills/implementation-thread/: SKILL.md
.claude/skills/visual-review/: SKILL.md
.claude/skills/worktree/: SKILL.md
.githooks/: pre-commit
.github/scripts/: gen-homebrew-formula.sh
.github/workflows/: ci.yml  docker.yml  node-matrix.yml  release.yml  wpt-worker.yml
crates/nub-cache-key/src/: lib.rs
crates/nub-cli/: Cargo.toml
crates/nub-cli/src/: cli.rs
crates/nub-cli/src/pm_engine/: install_family.rs  log.rs  mod.rs  output.rs  resource_limits.rs
crates/nub-cli/tests/: cli_grammar_parity.rs  install_engine.rs  integration.rs  resolution_compat.rs
crates/nub-core/: Cargo.toml  build.rs
crates/nub-core/src/node/: feature_matrix.rs  mod.rs  runtime_cache.rs  spawn.rs
crates/nub-core/src/pm/: registry.rs
crates/nub-native/: Cargo.toml
crates/nub-native/src/: cache.rs
docker/: Dockerfile.alpine  Dockerfile.slim  PUBLISHING.md  docker-entrypoint.sh  smoke.sh
npm/: build-local.sh
npm/nub/: package.json
npm/nub-darwin-arm64/: package.json
npm/nub-darwin-x64/: package.json
npm/nub-linux-arm64/: package.json
npm/nub-linux-arm64-musl/: package.json
npm/nub-linux-x64/: package.json
npm/nub-linux-x64-musl/: package.json
npm/nub-types/: package.json
npm/nub-win32-arm64/: package.json
npm/nub-win32-x64/: package.json
runtime/: navigator-locks.mjs  navigator-shim.mjs  preload-common.cjs  preload.cjs  preload.mjs  version.mjs
scripts/: decisions.mjs  new-worktree.ts  statusline-decisions.sh
scripts/fray/: thread-update.mjs
site/content/docs/: docker.mdx  faq.mdx  index.mdx  meta.json  run.mdx
site/content/docs/install/: index.mdx  npm.mdx  pnpm.mdx
site/content/docs/runtime/: index.mdx  workers.mdx
site/public/: install.sh  start.md
site/src/components/: install-tabs.tsx
tests/bench/install/: COLD-CAS.md  cold-cas.sh
tests/bench/install/fixtures/fat/: package.json  pnpm-lock.yaml
tests/conformance/frontdoor/: README.md  assertions.tsv  run.sh
tests/conformance/frontdoor/fixtures/bun/: package.json
tests/conformance/frontdoor/fixtures/envbridge/: package.json
tests/conformance/frontdoor/fixtures/npm/: package-lock.json  package.json
tests/conformance/frontdoor/fixtures/nub/: package.json
tests/conformance/frontdoor/fixtures/pnpm10/: package.json
tests/conformance/frontdoor/fixtures/pnpm11/: package.json
tests/conformance/frontdoor/fixtures/yarn1/: package.json
tests/conformance/frontdoor/fixtures/yarnberry/: package.json
tests/fixtures/navigator-shim/: main.mjs  package.json
tests/fixtures/web-locks/: main.mjs  package.json
tests/pnpm-conformance/: run.sh
