[package]
name = "nub-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Release-only single-binary mode: `build.rs` tars+zstd-compresses the staged
# `runtime/` tree into the binary (`include_bytes!`) and `runtime_cache` extracts
# it once, on first run, to a versioned cache dir. OFF by default so the dev loop
# (`--profile fast`, `make install-dev`) pays no blob re-tar and `find_preload`
# keeps walking to the in-repo `runtime/` (live-editable). CI release builds turn
# it on via `nub-cli/embed-runtime`. The optional deps are pulled in ONLY here:
# `ruzstd` (pure-Rust decode at runtime) ships in the binary; `zstd`/`tar`/`sha2`
# (encode + key-hash at build time) are build-deps that never reach the binary.
embed-runtime = ["dep:ruzstd", "dep:zstd", "dep:tar", "dep:sha2"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
libc.workspace = true
dirs-next.workspace = true
dotenvy = "0.15"
flate2.workspace = true
glob-match = "0.2"
liblzma.workspace = true
reqwest.workspace = true
# Regex-literal script selectors (`nub run "/^build:/"`) — pnpm's `run /regexp/`
# parity. Already in the dependency tree transitively; declared direct here for
# the one use site (`select_scripts`). `default-features` (unicode) keeps `\w`
# etc. matching pnpm's JS RegExp closely enough for script-name selection.
regex = "1"
rustc-hash.workspace = true
semver = "1"
serde.workspace = true
# `preserve_order` makes serde_json::Map keep INSERTION order (IndexMap-backed).
# Load-bearing for the pin writers in `pm::resolve`: a `package.json` round-trip
# must not alphabetize the user's keys (a pin write that reorders the manifest
# reads as vandalism in the diff). nub-native enables the same feature for its
# tsconfig hashing; declaring it here keeps nub-core's behavior identical with
# and without feature unification against nub-native.
serde_json = { workspace = true, features = ["preserve_order"] }
# sha1 (ancient PM publishes carry only a sha1 dist.shasum) sits alongside sha2.
# Pinned 0.10 to share `digest` 0.10 with sha2 — a single Digest trait, no second
# major. sha512 is preferred; sha1 is the fail-closed fallback only.
sha1 = "0.10"
sha2.workspace = true
tar.workspace = true
zip.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Pure-Rust zstd DECODER for inflating the embedded runtime blob on first run
# (embed-runtime only). Pure-Rust on purpose: no libzstd/C toolchain in the
# shipped binary; the one-time ~tens-of-ms decode is irrelevant. Encode happens
# at build time with the `zstd` build-dep (libzstd) — decode never needs it.
ruzstd = { version = "0.8", optional = true }

# Build-time only (embed-runtime): tar + zstd-compress the staged runtime tree
# into `$OUT_DIR/runtime.tar.zst` and hash it for the cache key. Build-deps never
# reach the shipped binary, so libzstd's C build lives here, not in the product.
[build-dependencies]
tar = { version = "0.4", optional = true }
zstd = { version = "0.13", optional = true }
sha2 = { version = "0.10", optional = true }

# Unix-only: terminating-signal forwarding to the child (SIGINT/SIGTERM/SIGHUP).
# Gated so the Windows build (which uses a different ctrl_c path) doesn't pull it.
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[dev-dependencies]
criterion.workspace = true
blake3 = { workspace = true }
# Encoder for the runtime_cache unit tests (they build a tiny tar.zst to exercise
# the decode/unpack/rename/GC path). The PRODUCT decodes with pure-Rust `ruzstd`;
# only the test fixtures need the libzstd encoder, so it stays a dev-dep.
zstd = "0.13"

[[bench]]
name = "workspace_filter"
harness = false

[[bench]]
name = "cache_hash"
harness = false

[[bench]]
name = "cache_body_copy"
harness = false

[lints]
workspace = true
